--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   backend:
     name: Backend
@@ -64,10 +69,12 @@ jobs:
       - name: Run tests with coverage
         run: mix coveralls.json
 
-      - name: Publish backend coverage summary
+      - name: Build backend coverage report
+        id: coverage_report
         shell: bash
         run: |
           coverage_file="cover/excoveralls.json"
+          report_file="${GITHUB_WORKSPACE}/api/cover/coverage_comment.md"
 
           if [ ! -f "$coverage_file" ]; then
             echo "Coverage file not found at $coverage_file" >&2
@@ -89,7 +96,12 @@ jobs:
           )
 
           {
+            echo "<!-- backend-coverage-report -->"
             echo "## Backend coverage"
+            echo
+            echo "**Total:** ${total_covered}/${total_tracked} (${total_pct}%)"
+            echo
+            echo "<details><summary>Per-module coverage</summary>"
             echo
             echo "| Module | Covered lines | Total lines | Coverage |"
             echo "| --- | ---: | ---: | ---: |"
@@ -118,8 +130,58 @@ jobs:
               | "| \(.name) | \(.covered) | \(.tracked) | \(.pct)% |"
             ' "$coverage_file"
             echo
-            echo "**Total:** ${total_covered}/${total_tracked} (${total_pct}%)"
-          } >> "$GITHUB_STEP_SUMMARY"
+            echo "</details>"
+          } > "$report_file"
+
+          echo "report_file=$report_file" >> "$GITHUB_OUTPUT"
+
+      - name: Post backend coverage PR comment
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        env:
+          COVERAGE_REPORT_FILE: ${{ steps.coverage_report.outputs.report_file }}
+        with:
+          script: |
+            const fs = require("fs");
+            const marker = "<!-- backend-coverage-report -->";
+            const body = fs.readFileSync(process.env.COVERAGE_REPORT_FILE, "utf8");
+            const { owner, repo } = context.repo;
+            const issue_number = context.issue.number;
+
+            try {
+              const comments = await github.paginate(github.rest.issues.listComments, {
+                owner,
+                repo,
+                issue_number,
+                per_page: 100
+              });
+
+              const existing = comments.find((comment) =>
+                comment.user?.type === "Bot" &&
+                typeof comment.body === "string" &&
+                comment.body.includes(marker)
+              );
+
+              if (existing) {
+                await github.rest.issues.updateComment({
+                  owner,
+                  repo,
+                  comment_id: existing.id,
+                  body
+                });
+                core.info(`Updated coverage comment: ${existing.id}`);
+              } else {
+                const created = await github.rest.issues.createComment({
+                  owner,
+                  repo,
+                  issue_number,
+                  body
+                });
+                core.info(`Created coverage comment: ${created.data.id}`);
+              }
+            } catch (error) {
+              core.warning(`Could not create or update coverage comment: ${error.message}`);
+            }
 
   web:
     name: Web
